--- a/.prettierrc
+++ b/.prettierrc
@@ -1,11 +1,11 @@
 {
-    "semi": false,
-    "singleQuote": true,
-    "jsxSingleQuote": false,
-    "bracketSpacing": false,
-    "trailingComma": "es5",
-    "printWidth": 120,
-    "tabWidth": 2,
-    "arrowParens": "avoid",
-    "endOfLine": "lf"
+  "semi": false,
+  "singleQuote": true,
+  "jsxSingleQuote": false,
+  "bracketSpacing": false,
+  "trailingComma": "es5",
+  "printWidth": 120,
+  "tabWidth": 2,
+  "arrowParens": "avoid",
+  "endOfLine": "auto"
 }
