--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,7 +27,12 @@
   "parser": "@babel/eslint-parser",
   "rules": {
     "indent": ["error", 2],
-    "prettier/prettier": "error",
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ],
     "linebreak-style": [0, "unix"],
     "quotes": ["error", "single"],
     "semi": ["error", "never"],
@@ -36,6 +41,7 @@
     "import/no-unresolved": [2, {"caseSensitive": false}],
     "react/jsx-filename-extension": [1, {"extensions": [".js", ".jsx"]}],
     "strict": 0,
+    "endOfLine": "off",
     "import/order": [
       2,
       {
@@ -50,6 +56,9 @@
         "extensions": [".js", ".jsx", ".ts", ".tsx"],
         "moduleDirectory": ["node_modules", "src/"]
       }
+    },
+    "react": {
+      "version": "detect"
     }
   }
 }
