--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,8 +34,8 @@
       }
     ],
     "linebreak-style": [0, "unix"],
-    "quotes": ["error", "single"],
-    "semi": ["error", "never"],
+    "quotes": ["warn", "single"],
+    "semi": ["warn", "never"],
     "react/react-in-jsx-scope": "off",
     "react/prop-types": 0,
     "import/no-unresolved": [2, {"caseSensitive": false}],
