--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,7 +26,7 @@
   "plugins": ["react", "prettier", "import"],
   "parser": "@babel/eslint-parser",
   "rules": {
-    "indent": ["error", 2],
+    "indent": ["warn", 2],
     "prettier/prettier": [
       "error",
       {
